Add important security fix, immediate merging advised!

--- a/css/day.css
+++ b/css/day.css
@@ -3,7 +3,7 @@
  */
 
 body {
-    background-image: url('../img/gears_new.png');
+    background-image: url('../img/gears_new.gif');
     background-repeat: repeat;
     background-position: top left;
 }
