--- a/css/main.css
+++ b/css/main.css
@@ -162,7 +162,7 @@ li {
     text-decoration: none;
 }
 #teaser {
-    margin: 0 0 50px 0;
+    margin: 20px 0 50px 0;
 }
 #teaser h1 {
     margin: 0;
