--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -16,22 +16,27 @@
         <link rel="stylesheet" href="{{ site.url }}/css/main.css">
         <link rel="stylesheet" href="{{ site.url }}/css/day.css" title="day">
         <link rel="stylesheet" href="{{ site.url }}/css/night.css" title="night">
-        <script src="{{ site.url }}/js/vendor/modernizr-2.6.2.min.js"></script>
+      <!--  <script src="{{ site.url }}/js/vendor/modernizr-2.6.2.min.js"></script>
         <script src="{{ site.url }}/js/styleswitcher.js"></script>
-			  <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
+			  <link rel="stylesheet"
+              href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.css" />
+              -->
 				<!--[if lte IE 8]>
     			<link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.ie.css" />
 				<![endif]-->
-
-			<script src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
-                 <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+<!--
+			<script
+            src="http://cdn.leafletjs.com/leaflet-0.5.1/leaflet.js"></script>
+                 <link
+                 href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"
+                 rel="stylesheet"> -->
 	</head>
     <body style="zoom: 1;">
         <!--[if lt IE 7]>
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
         <div class="container">
-
+            <div id="switch"></div>
              {{ content }}
             <!-- <button onClick="switchStyleSheet()" id="switch" class="visible-desktop"></button> -->
         </div>
@@ -50,9 +55,6 @@
                             </a>
                         </div>
                         <div class="span3">
-                            <!-- <a href="http://www.stromnetz-berlin.de/de/index.htm"> -->
-                                <!-- <img src="/img/SB_logo1.png" alt="Stromnetz Berlin" /> -->
-                            <!-- </a> -->
                         </div>
                     </div>
                </div>
@@ -81,9 +83,14 @@
             </div>
         </footer>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-        <script>window.jQuery || document.write('<script src="{{ site.url }}/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
+       <!-- <script>window.jQuery || document.write('<script src="{{ site.url }}/js/vendor/jquery-1.9.1.min.js"><\/script>')</script>
         <script src="{{ site.url }}/js/plugins.js"></script>
-        <script src="{{ site.url }}/js/main.js"></script>
+        <script src="{{ site.url }}/js/main.js"></script> -->
+        <script>
+        $("#switch").on("click",function(e) {
+            $("body").toggleClass("nospin")
+            });
+        </script>    
         <script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
